tests/bad/testfile-underscore-1.go
package main
import "fmt"

func main() {
	var _ = 1
	var x = 1 + _
	fmt.Print(x)
}
